# microservices

./: LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  ethicalcheck.yml
Backend/src/APIGateways/Liup.Authorization.Api/: Liup.Authorization.Api.csproj  Program.cs  appsettings.json
Backend/src/APIGateways/Liup.Authorization.Api/Controllers/: WeatherForecastController.cs
Backend/src/APIGateways/Liup.Authorization.Api/Properties/: launchSettings.json
Backend/src/APIGateways/Liup.Authorization.Api/ServiceInitializer/: Initialize.cs
Backend/src/APIGateways/Liup.Gateway/: Liup.Gateway.csproj  Program.cs  ocelot.json
Backend/src/APIGateways/Liup.Gateway/Properties/: launchSettings.json
Backend/src/MicroServices/AuthorizationService/Liup.Authorization.Application/: Liup.Authorization.Application.csproj
Backend/src/MicroServices/AuthorizationService/Liup.Authorization.Infrastructure/: Liup.Authorization.Infrastructure.csproj
Backend/src/MicroServices/UserInteractionService/Liup.UserInteraction.Domain/: Liup.UserInteraction.Domain.csproj
Backend/src/MicroServices/UserInteractionService/Liup.UserInteraction.Infrastructure/: Liup.UserInteraction.Infrastructure.csproj
frameworks/dll_designs/aes_enc/: Cargo.toml
frameworks/dll_designs/aes_enc/complated/: main.rs
frameworks/dll_designs/aes_enc/src/: main.rs
frameworks/dll_designs/hello_world/: Cargo.toml
frameworks/dll_designs/hello_world/src/: lib.rs  main.rs
frameworks/netcore/: Coalescing.sln
frameworks/netcore/Coalescing/src/APIGateway/Coa.Auth.Api/: Coa.Auth.Api.csproj  (+2 more)
(+248 files in other folders)
