[package]
name = "aes_enc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
rand = "0.8.4"
pbkdf2 = "0.12.2"
base64 = "0.13.0"
sha2 = "0.9.1"
hex = "0.4.1"
truncate = "0.1.0"
libc = "0.2.48"

[lib]
name = "aes_dll"
crate-type = ["cdylib"]